dev/soludev/nats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nats-monitoring-ingress
  namespace: soludev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: nats-dev.soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nats
                port:
                  number: 8222
